# flowfit_backend

./: .dockerignore  .gitignore  Dockerfile  config.py  database.py  fly.toml  main.py  migrate_uploads.py  pyproject.toml  requirements.txt  seed_finance.py  seed_sales.py
routers/: auth.py  finance.py  hr.py  legal.py  procurement.py  strategy.py
routers/CS/: cs_faq.py  cs_policy.py  cs_response.py  cs_voc.py
routers/HR/: employee_management.py  hr_evaluation.py  hr_team_eval.py  issued_employee_ids.py  recruitment.py  regulations.py  retirement.py
routers/dev/: dev_docs.py  dev_log.py  dev_release.py  dev_translate.py
routers/marketing/: mkt_copy.py  mkt_image.py  mkt_press.py  mkt_sns.py
routers/sales/: sales_meeting.py  sales_performance.py  sales_proposal.py
services/CS/: cs_faq_service.py  cs_policy_service.py  cs_response_service.py  cs_voc_service.py
services/HR/: hr_evaluation_entry_service.py  hr_evaluation_service.py  hr_notification_service.py  hr_recruitment_service.py  hr_regulation_service.py  hr_team_eval_service.py  issued_employee_id_service.py
services/common/: document_parser.py  rag_utils.py  stt_service.py
services/dev/: dev_docs_service.py  dev_log_service.py  dev_release_service.py  dev_translate_service.py
services/finance/: finance_account_service.py  finance_ocr_service.py
services/legal/: legal_chat_service.py  legal_contract_service.py
services/marketing/: mkt_copy_service.py  mkt_image_service.py  mkt_press_service.py  mkt_sns_service.py
services/procurement/: procurement_agent_service.py  (+1 more)
(+28 files in other folders)
